--- a/mainpage/templates/mainpage/index.html
+++ b/mainpage/templates/mainpage/index.html
@@ -29,6 +29,7 @@
     <link type="text/css" rel="stylesheet" href="{% static "mainpage/css/responsive.css" %}">
 
     <script type="text/javascript" src="{% static "mainpage/library/modernizr/modernizr.js" %}"></script>
+
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -304,27 +305,32 @@
                     <h2 class="small-heading">ربات خود را سفارش دهید</h2>
 
                     <div class="contact-form col-sm-11 clearfix">
+                        {% if submit_form == "failed_email" or submit_form == "failed_phone"  %}
+                            <div class="panel panel-danger">
+                                <div style="text-align: right;direction: rtl;font-weight: bold;color: red;" class="panel-body">{{ message }}</div>
+                            </div>
+                        {% endif %}
 
                         <form action="" id="orderForm" method="post" name="orderForm">
                             {% csrf_token %}
                             {{ form }}
                             <fieldset>
                             <div class="col-sm-6 pull-right">
-                                <input required id="first_name_order" name="first_name_order" placeholder="نام" type="text"
+                                <input onkeypress='return event.charCode <= 48 || event.charCode >= 57'  required id="first_name_order" name="first_name_order" placeholder="نام" type="text"
                                        value="">
                             </div>
 
                             <div class="col-sm-6">
-                                <input required id="last_name_order" name="last_name_order" placeholder="نام خانوادگی" type="text"
+                                <input onkeypress='return event.charCode <= 48 || event.charCode >= 57'  required id="last_name_order" name="last_name_order" placeholder="نام خانوادگی" type="text"
                                        value="">
                             </div>
 
                             <div class="col-sm-12">
-                                <input required id="email_order" name="email_order" placeholder="ایمیل" type="text" value="">
+                                <input required id="email_order" name="email_order" placeholder="ایمیل" type="email" value="">
                             </div>
 
                             <div class="col-sm-12">
-                                <input required id="phone_order" name="phone_order" placeholder="شماره موبایل" type="number"
+                                <input onkeypress='return event.charCode >= 48 && event.charCode <= 57'  minlength=10 maxlength="10" required id="phone_order" name="phone_order" placeholder="شماره موبایل" type="text"
                                        value="">
                             </div>
 
@@ -350,19 +356,9 @@
                                     <button class="submit active">سفارش</button>
                                 </div>
 
-                                <div class="error col-xs-12">
-                                    <h3>/مشکلی در فرستادن پیام ایجاد شد.</h3>
-                                </div>
-
-                                <!-- Error Message [ END ] -->
-
-                                <div class="success col-xs-12">
-                                    <h3>پیام شما با موفقیت ارسال شد.</h3>
-                                </div>
-
-                                <!-- Submit Button [ END ] -->
-
                             </fieldset>
+
+
                         </form>
 
                         <!-- Contact Form [ END ] -->
@@ -865,50 +861,32 @@
 
                 <div class="contact-form col-sm-11 clearfix">
 
-                    <form action="" id="contactForm" method="post" name="contactForm">
+                    <form action="/contact" id="contact_form" method="post" name="contact_form">
+                        {% csrf_token %}
+
                         <fieldset>
                             <div class="col-sm-6 pull-right">
-                                <input required id="first_name" name="name" placeholder= "نام" type="text" value="">
+                                <input onkeypress='return event.charCode <= 48 || event.charCode >= 57'  required id="first_name_contact" name="first_name_contact" placeholder="نام" type="text"
+                                       value="">
                             </div>
 
                             <div class="col-sm-6">
-                                <input required id="last_name" name="name" placeholder="نام خانوادگی" type="text" value="">
+                                <input onkeypress='return event.charCode <= 48 || event.charCode >= 57'  required id="last_name_contact" name="last_name_contact" placeholder="نام خانوادگی" type="text"
+                                       value="">
                             </div>
-
-                            <!-- Name Field [ END ] -->
 
                             <div class="col-sm-12">
-                                <input required id="email" name="email" placeholder="ایمیل" type="text" value="">
+                                <input required id="email_contact" name="email_contact" placeholder="ایمیل" type="email" value="">
                             </div>
-
-                            <!-- Email Field [ END ] -->
 
                             <div class="col-xs-12">
-                                <textarea required cols="5" id="message" name="message" placeholder="پیام شما"></textarea>
+                                <textarea maxlength="400" required cols="5" id="message_contact" name="message_contact" placeholder="پیام شما"></textarea>
                             </div>
-
-                            <!-- Message Field [ END ] -->
-
-                            <div class="col-xs-12">
-                                <button class="submit active">فرستادن</button>
-                            </div>
-
-                            <div class="error col-xs-12">
-                                <h3>/مشکلی در فرستادن پیام ایجاد شد.</h3>
-                            </div>
-
-                            <!-- Error Message [ END ] -->
-
-                            <div class="success col-xs-12">
-                                <h3>پیام شما با موفقیت ارسال شد.</h3>
-                            </div>
-
-                            <!-- Submit Button [ END ] -->
-
+                             <div class="col-xs-12">
+                                    <button class="submit active">فرستادن</button>
+                                </div>
                         </fieldset>
                     </form>
-
-                    <!-- Contact Form [ END ] -->
 
                 </div>
             </div>
@@ -981,6 +959,44 @@
       });
     </script>
     <script type="text/javascript" src="{% static "mainpage/js/script.js" %}"></script>
+
+    {% if submit_form == "failed_email" or submit_form == "failed_phone" %}
+    <script>
+
+   var introWidth = $('.introduction').width(),
+            menuWidth = $('.menu').width();
+
+        $('.introduction').animate({
+            right: '-' + introWidth
+        }, 1000, 'easeOutQuart');
+        $('.menu').animate({
+            right: menuWidth
+        }, 1000, 'easeOutQuart', function () {
+            $('.home-page').css({
+                visibility: 'hidden'
+            });
+        });
+$(window).load(function () {
+
+        $('#preloader').delay(350).fadeOut('slow', function () {
+            $('.profile-page, .contact-page, .portfolio-page').hide();
+        });
+    });
+
+    </script>
+    {% endif %}
+
+    {% if submit_form == "false" %}
+    <script>
+        $(window).load(function () {
+
+        $('#preloader').delay(350).fadeOut('slow', function () {
+            $('.profile-page, .resume-page, .contact-page, .portfolio-page').hide();
+        });
+    });
+    </script>
+    {% endif %}
+
 </body>
 
 </html>
