--- a/admin_panel/templates/blank.html
+++ b/admin_panel/templates/blank.html
@@ -23,19 +23,19 @@
     <!-- The styles -->
     <link id="bs-css" href="{% static 'adminpanelcss/bootstrap-cerulean.min.css' $}" rel="stylesheet">
 
-    <link href="{% static 'adminpanelcss/charisma-app.css' %}" rel="stylesheet">
-    <link href="{% static 'adminpanelbower_components/fullcalendar/dist/fullcalendar.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanelbower_components/fullcalendar/dist/fullcalendar.print.css' %}" rel='stylesheet' media='print'>
-    <link href="{% static 'adminpanelbower_components/chosen/chosen.min.css' $}" rel='stylesheet'>
-    <link href="{% static 'adminpanel'bower_components/colorbox/example3/colorbox.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanelbower_components/responsive-tables/responsive-tables.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanelbower_components/bootstrap-tour/build/css/bootstrap-tour.min.css' %"} rel='stylesheet'>
-    <link href="{% static 'adminpanelcss/jquery.noty.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanelcss/noty_theme_default.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanelcss/elfinder.min.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanelcss/elfinder.theme.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanelcss/jquery.iphone.toggle.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanelcss/uploadify.css' %}" rel='stylesheet'>
+    <link href="{% static 'adminpanel/css/charisma-app.css' %}" rel="stylesheet">
+    <link href="{% static 'adminpanel/bower_components/fullcalendar/dist/fullcalendar.css' %}" rel='stylesheet'>
+    <link href="{% static 'adminpanel/bower_components/fullcalendar/dist/fullcalendar.print.css' %}" rel='stylesheet' media='print'>
+    <link href="{% static 'adminpanel/bower_components/chosen/chosen.min.css' $}" rel='stylesheet'>
+    <link href="{% static 'adminpanel/bower_components/colorbox/example3/colorbox.css' %}" rel='stylesheet'>
+    <link href="{% static 'adminpanel/bower_components/responsive-tables/responsive-tables.css' %}" rel='stylesheet'>
+    <link href="{% static 'adminpanel/bower_components/bootstrap-tour/build/css/bootstrap-tour.min.css' %"} rel='stylesheet'>
+    <link href="{% static 'adminpanel/css/jquery.noty.css' %}" rel='stylesheet'>
+    <link href="{% static 'adminpanel/css/noty_theme_default.css' %}" rel='stylesheet'>
+    <link href="{% static 'adminpanel/css/elfinder.min.css' %}" rel='stylesheet'>
+    <link href="{% static 'adminpanel/css/elfinder.theme.css' %}" rel='stylesheet'>
+    <link href="{% static 'adminpanel/css/jquery.iphone.toggle.css' %}" rel='stylesheet'>
+    <link href="{% static 'adminpanel/css/uploadify.css' %}" rel='stylesheet'>
     <link href="{% static 'adminpanel/css/animate.min.css' %}" rel="stylesheet" >
 
     <!-- jQuery -->
@@ -220,38 +220,38 @@
 
 <!-- external javascript -->
 
-<script src="{% static 'bower_components/bootstrap/dist/js/bootstrap.min.js' %}"></script>
+<script src="{% static 'adminpanel/bower_components/bootstrap/dist/js/bootstrap.min.js' %}"></script>
 
 <!-- library for cookie management -->
-<script src="{% static 'js/jquery.cookie.js' %}"></script>
+<script src="{% static 'adminpanel/js/jquery.cookie.js' %}"></script>
 <!-- calender plugin -->
-<script src="{% static 'bower_components/moment/min/moment.min.js' %}"></script>
-<script src="{% static 'bower_components/fullcalendar/dist/fullcalendar.min.js' $}"></script>
+<script src="{% static 'adminpanel/bower_components/moment/min/moment.min.js' %}"></script>
+<script src="{% static 'adminpanel/bower_components/fullcalendar/dist/fullcalendar.min.js' $}"></script>
 <!-- data table plugin -->
-<script src="{% static 'js/jquery.dataTables.min.js' %}"></script>
+<script src="{% static 'adminpanel/js/jquery.dataTables.min.js' %}"></script>
 
 <!-- select or dropdown enhancer -->
-<script src="{% static 'bower_components/chosen/chosen.jquery.min.js' %}"></script>
+<script src="{% static 'adminpanel/bower_components/chosen/chosen.jquery.min.js' %}"></script>
 <!-- plugin for gallery image view -->
-<script src="{% static 'bower_components/colorbox/jquery.colorbox-min.js' %}"></script>
+<script src="{% static 'adminpanel/bower_components/colorbox/jquery.colorbox-min.js' %}"></script>
 <!-- notification plugin -->
-<script src="{% static 'js/jquery.noty.js' %}"></script>
+<script src="{% static 'adminpanel/js/jquery.noty.js' %}"></script>
 <!-- library for making tables responsive -->
-<script src="{% static 'bower_components/responsive-tables/responsive-tables.js'%}"></script>
+<script src="{% static 'adminpanel/bower_components/responsive-tables/responsive-tables.js'%}"></script>
 <!-- tour plugin -->
-<script src="{% static 'bower_components/bootstrap-tour/build/js/bootstrap-tour.min.js' %}"></script>
+<script src="{% static 'adminpanel/bower_components/bootstrap-tour/build/js/bootstrap-tour.min.js' %}"></script>
 <!-- star rating plugin -->
-<script src="{% static 'js/jquery.raty.min.js' %}"></script>
+<script src="{% static 'adminpanel/js/jquery.raty.min.js' %}"></script>
 <!-- for iOS style toggle switch -->
-<script src="{% static 'js/jquery.iphone.toggle.js' %}"></script>
+<script src="{% static 'adminpanel/js/jquery.iphone.toggle.js' %}"></script>
 <!-- autogrowing textarea plugin -->
-<script src="{% static 'js/jquery.autogrow-textarea.js' %}"></script>
+<script src="{% static 'adminpanel/js/jquery.autogrow-textarea.js' %}"></script>
 <!-- multiple file upload plugin -->
-<script src="{% static 'js/jquery.uploadify-3.1.min.js' %}"></script>
+<script src="{% static 'adminpanel/js/jquery.uploadify-3.1.min.js' %}"></script>
 <!-- history.js for cross-browser state change on ajax -->
-<script src="{% static 'js/jquery.history.js' %}"></script>
+<script src="{% static 'adminpanel/js/jquery.history.js' %}"></script>
 <!-- application script for Charisma demo -->
-<script src="{% static 'js/charisma.js' %}"></script>
+<script src="{% static 'adminpanel/js/charisma.js' %}"></script>
 
 
 </body>
