--- a/admin_panel/templates/blank.html
+++ b/admin_panel/templates/blank.html
@@ -143,7 +143,7 @@
 
             </div>
             <div class="box-content">
-                <form role="form" action="/" id="adding" method="post" name="adding_form">
+                <form role="form" action="/admin-panel/" id="adding" method="post" name="adding_form">
 
                     <div class="form-group" style="text-align: right">
                         <label for="categoryname">دسته بندی</label>
