--- a/admin_panel/templates/blank.html
+++ b/admin_panel/templates/blank.html
@@ -21,6 +21,7 @@
         EasyBot
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/css/bootstrap-select.min.css">
     <!-- The styles -->
     <link id="bs-css" href="{% static 'adminpanel/css/bootstrap-cerulean.min.css' %}" rel="stylesheet">
 
@@ -146,14 +147,15 @@
 
                 <form role="form" action="/admin-panel/adding/" id="adding" method="post" name="adding_form">
 
-                    <div class="form-group" style="text-align: right">
-                        <label for="categoryname">دسته بندی</label>
-                        <select name="category_name">
+                    <div class="form-group " >
+                        <label for="categoryname" style="text-align: right ; float: right">دسته بندی</label>
+                        <select style="margin-top: 5%;text-align: right;direction: rtl ; "  class="selectpicker " data-width="100%" title="دسته بندی مورد نظر را انتخاب کنید" data-live-search="true" name="category_name" >
                             {% for cat in cat_data %}
-                            <option value={{ cat.0 }}>{{ cat.1 }}</option>
+                            <option value={{ cat.0 }} style="text-align: right">{{ cat.1 }}</option>
                             {% endfor %}
                         </select>
-                    </div>
+
+                        </div>
                     <div class="form-group" style="text-align: right">
                         <label for="productname">نام محصول</label>
                         <input style="text-align: right" type="text" class="form-control" id="productname" name="product_name" placeholder="">
@@ -224,7 +226,15 @@
 
 </div><!--/.fluid-container-->
 
-<!-- external javascript -->
+<!-- external javascript --><!-- Latest compiled and minified CSS -->
+
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/bootstrap-select.min.js"></script>
+
+<!-- (Optional) Latest compiled and minified JavaScript translation files -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/i18n/defaults-*.min.js"></script>
+
 
 <script src="{% static 'adminpanel/bower_components/bootstrap/dist/js/bootstrap.min.js' %}"></script>
 
