Showing logic added

--- a/admin_panel/templates/blank.html
+++ b/admin_panel/templates/blank.html
@@ -74,7 +74,7 @@
                 <button type="button" class="btn btn-default"> نظرات</button>
                 <button type="button" class="btn btn-default"> دسته بندی ها</button>
                 <button type="button" class="btn btn-default"> انتقادات پیشنهادات</button>
-                <button type="button" class="btn btn-default" > مشاهده کردن</button>
+                <button type="button" class="btn btn-default"  ><a href="showing.html"> مشاهده کردن</a></button>
                 <button type="button" class="btn btn-primary">افزودن </button>
                 <button type="button" class="btn btn-default"> صفحه اصلی</button>
             </div>
