--- a/admin_panel/templates/showing.html
+++ b/admin_panel/templates/showing.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,22 +21,24 @@
         EasyBot
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/css/bootstrap-select.min.css">
     <!-- The styles -->
-    <link id="bs-css" href="{% static 'adminpanelcss/bootstrap-cerulean.min.css' $}" rel="stylesheet">
+    <link id="bs-css" href="{% static 'adminpanel/css/bootstrap-cerulean.min.css' %}" rel="stylesheet">
 
-    <link href="{% static 'adminpanelcss/charisma-app.css' %}" rel="stylesheet">
-    <link href="{% static 'adminpanelbower_components/fullcalendar/dist/fullcalendar.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanelbower_components/fullcalendar/dist/fullcalendar.print.css' %}" rel='stylesheet' media='print'>
-    <link href="{% static 'adminpanelbower_components/chosen/chosen.min.css' $}" rel='stylesheet'>
-    <link href="{% static 'adminpanel'bower_components/colorbox/example3/colorbox.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanelbower_components/responsive-tables/responsive-tables.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanelbower_components/bootstrap-tour/build/css/bootstrap-tour.min.css' %"} rel='stylesheet'>
-    <link href="{% static 'adminpanelcss/jquery.noty.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanelcss/noty_theme_default.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanelcss/elfinder.min.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanelcss/elfinder.theme.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanelcss/jquery.iphone.toggle.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanelcss/uploadify.css' %}" rel='stylesheet'>
+    <link href="{% static 'adminpanel/css/charisma-app.css' %}" rel="stylesheet">
+    <link href="{% static 'adminpanel/bower_components/fullcalendar/dist/fullcalendar.css' %}" rel='stylesheet'>
+    <link href="{% static 'adminpanel/bower_components/fullcalendar/dist/fullcalendar.print.css' %}" rel='stylesheet' media='print'>
+    <link href="{% static 'adminpanel/bower_components/chosen/chosen.min.css' %}" rel='stylesheet'>
+    <link href="{% static 'adminpanel/bower_components/colorbox/example3/colorbox.css' %}" rel='stylesheet'>
+    <link href="{% static 'adminpanel/bower_components/responsive-tables/responsive-tables.css' %}" rel='stylesheet'>
+    <link href="{% static 'adminpanel/bower_components/bootstrap-tour/build/css/bootstrap-tour.min.css' %}" rel='stylesheet'>
+    <link href="{% static 'adminpanel/css/jquery.noty.css' %}" rel='stylesheet'>
+    <link href="{% static 'adminpanel/css/noty_theme_default.css' %}" rel='stylesheet'>
+    <link href="{% static 'adminpanel/css/elfinder.min.css' %}" rel='stylesheet'>
+    <link href="{% static 'adminpanel/css/elfinder.theme.css' %}" rel='stylesheet'>
+    <link href="{% static 'adminpanel/css/jquery.iphone.toggle.css' %}" rel='stylesheet'>
+    <link href="{% static 'adminpanel/css/uploadify.css' %}" rel='stylesheet'>
     <link href="{% static 'adminpanel/css/animate.min.css' %}" rel="stylesheet" >
 
     <!-- jQuery -->
@@ -99,7 +102,7 @@
     <!-- topbar ends -->
 <div class="container-fluid">
 <div class="row">
-<div class="box col-md-offset-2 col-md-10 col-sm-3 ">
+<div class="box col-md-12 col-sm-3 ">
 <div class="box-inner">
     <div class="box-header well" data-original-title="">
         <h2 style="float:right"><i  style="padding-right: 2%" class="glyphicon glyphicon-user"> محصولات</i> </h2>
@@ -122,30 +125,39 @@
         </thead>
         <tbody>
         <tr>
-            <td class="center pull-right">
-            <a class="btn btn-danger" href="#">
-                <i class="glyphicon glyphicon-trash icon-white"></i>
-                حذف
-            </a>
+            {% for data in product_data %}
+            <td class="center ">
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-success btn-sm" style="float: right">
 
-            <a class="btn btn-info" href="#">
-                <i class="glyphicon glyphicon-edit icon-white"></i>
-                تغییر
-            </a>
-            <a class="btn btn-success" href="#">
-                <i class="glyphicon glyphicon-zoom-in icon-white"></i>
-                نمایش
-            </a>
+                            <i class="glyphicon glyphicon-zoom-in icon-white"></i>
+                            نمایش
+
+                    </button>
+                    <button type="button" class="btn btn-info btn-sm" style="float: right">
+
+                            <i class="glyphicon glyphicon-edit icon-white"></i>
+                            تغییر
+
+                    </button>
+                    <button type="button" class="btn btn-danger btn-sm" style="float: right">
+
+                            <i class="glyphicon glyphicon-trash icon-white"></i>
+                            حذف
+
+                    </button>
+                </div>
             </td>
-            {% for item in models_result %}
-                <td>{{item.image}}</td>
-                <td>{{item.price}}</td>
-                <td>{[item.text}}</td>
-                <td>{{item.product_name}}</td>
+
+                <td>{{data.3}}</td>
+                <td>{{data.4}}</td>
+                <td>{{data.2}}</td>
+                <td>{{data.1}}</td>
 
         </tr>
-            {% endfor $}
+            {% endfor %}
         </tbody>
+
     </table>
 
     </div>
@@ -170,41 +182,49 @@
 
 </div><!--/.fluid-container-->
 
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 <!-- external javascript -->
 
-<script src="{% static 'bower_components/bootstrap/dist/js/bootstrap.min.js' %}"></script>
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/bootstrap-select.min.js"></script>
 
-<!-- library for cookie management -->
-<script src="{% static 'js/jquery.cookie.js' %}"></script>
+<!-- (Optional) Latest compiled and minified JavaScript translation files -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/i18n/defaults-*.min.js"></script>
+
+
+<script src="{% static 'adminpanel/bower_components/bootstrap/dist/js/bootstrap.min.js' %}"></script>
+
+
 <!-- calender plugin -->
-<script src="{% static 'bower_components/moment/min/moment.min.js' %}"></script>
-<script src="{% static 'bower_components/fullcalendar/dist/fullcalendar.min.js' $}"></script>
+<script src="{% static 'adminpanel/bower_components/moment/min/moment.min.js' %}"></script>
+<script src="{% static 'adminpanel/bower_components/fullcalendar/dist/fullcalendar.min.js' %}"></script>
 <!-- data table plugin -->
-<script src="{% static 'js/jquery.dataTables.min.js' %}"></script>
+<script src="{% static 'adminpanel/js/jquery.dataTables.min.js' %}"></script>
 
 <!-- select or dropdown enhancer -->
-<script src="{% static 'bower_components/chosen/chosen.jquery.min.js' %}"></script>
+<script src="{% static 'adminpanel/bower_components/chosen/chosen.jquery.min.js' %}"></script>
 <!-- plugin for gallery image view -->
-<script src="{% static 'bower_components/colorbox/jquery.colorbox-min.js' %}"></script>
+<script src="{% static 'adminpanel/bower_components/colorbox/jquery.colorbox-min.js' %}"></script>
 <!-- notification plugin -->
-<script src="{% static 'js/jquery.noty.js' %}"></script>
+<script src="{% static 'adminpanel/js/jquery.noty.js' %}"></script>
 <!-- library for making tables responsive -->
-<script src="{% static 'bower_components/responsive-tables/responsive-tables.js'%}"></script>
+<script src="{% static 'adminpanel/bower_components/responsive-tables/responsive-tables.js'%}"></script>
 <!-- tour plugin -->
-<script src="{% static 'bower_components/bootstrap-tour/build/js/bootstrap-tour.min.js' %}"></script>
+<script src="{% static 'adminpanel/bower_components/bootstrap-tour/build/js/bootstrap-tour.min.js' %}"></script>
 <!-- star rating plugin -->
-<script src="{% static 'js/jquery.raty.min.js' %}"></script>
+<script src="{% static 'adminpanel/js/jquery.raty.min.js' %}"></script>
 <!-- for iOS style toggle switch -->
-<script src="{% static 'js/jquery.iphone.toggle.js' %}"></script>
+<script src="{% static 'adminpanel/js/jquery.iphone.toggle.js' %}"></script>
 <!-- autogrowing textarea plugin -->
-<script src="{% static 'js/jquery.autogrow-textarea.js' %}"></script>
+<script src="{% static 'adminpanel/js/jquery.autogrow-textarea.js' %}"></script>
 <!-- multiple file upload plugin -->
-<script src="{% static 'js/jquery.uploadify-3.1.min.js' %}"></script>
+<script src="{% static 'adminpanel/js/jquery.uploadify-3.1.min.js' %}"></script>
 <!-- history.js for cross-browser state change on ajax -->
-<script src="{% static 'js/jquery.history.js' %}"></script>
+<script src="{% static 'adminpanel/js/jquery.history.js' %}"></script>
 <!-- application script for Charisma demo -->
-<script src="{% static 'js/charisma.js' %}"></script>
-
+<script src="{% static 'adminpanel/js/charisma.js' %}"></script>
 
 
 </body>
