--- a/admin_panel/templates/category.html
+++ b/admin_panel/templates/category.html
@@ -70,11 +70,11 @@
             <!-- navbar buttons starts -->
             <div class="btn-group pull-right" role="group">
                 <button type="button" class="btn btn-default"> سفارشات</button>
-                <button type="button" class="btn btn-default"> نظرات</button>
-                <button type="button" class="btn btn-primary"> دسته بندی ها</button>
-                <button type="button" class="btn btn-default"> انتقادات پیشنهادات</button>
-                <button type="button" class="btn btn-default"> مشاهده کردن</button>
-                <button type="button" class="btn btn-default">افزودن </button>
+                <button type="button" class="btn btn-default"><a href="comments.html"> نظرات</a></button>
+                <button type="button" class="btn btn-primary"><a href="category.html"> دسته بندی ها</a></button>
+                <button type="button" class="btn btn-default"><a href="enteghadat.html"> انتقادات پیشنهادات</a></button>
+                <button type="button" class="btn btn-default"> <a href="showing.html">مشاهده کردن</a></button>
+                <button type="button" class="btn btn-default"><a href="adding.html">افزودن</a></button>
                 <button type="button" class="btn btn-default"> صفحه اصلی</button>
             </div>
 
@@ -114,6 +114,7 @@
     <table class="table table-striped table-bordered bootstrap-datatable datatable responsive">
         <thead>
         <tr>
+            {% for cat in cat_data %}
             <th style="text-align: right">تغییرات</th>
             <th style="text-align: right">نام دسته بندی</th>
         </tr>
@@ -131,7 +132,9 @@
             </a>
 
         </td>
+            <td style="text-align: right"> {{cat.1}} </td>
         </tr>
+            {% endfor %}
 
         </tbody>
     </table>
