--- a/admin_panel/templates/enteghadat.html
+++ b/admin_panel/templates/enteghadat.html
@@ -69,11 +69,11 @@
             <!-- navbar buttons starts -->
             <div class="btn-group pull-right" role="group">
                 <button type="button" class="btn btn-default"> سفارشات</button>
-                <button type="button" class="btn btn-default"> نظرات</button>
-                <button type="button" class="btn btn-default"> دسته بندی ها</button>
-                <button type="button" class="btn btn-primary"> انتقادات پیشنهادات</button>
-                <button type="button" class="btn btn-default"> مشاهده کردن</button>
-                <button type="button" class="btn btn-default">افزودن </button>
+                <button type="button" class="btn btn-default"><a href="commentshtml"> نظرات</a></button>
+                <button type="button" class="btn btn-default"><a href="category.html"> دسته بندی ها</a></button>
+                <button type="button" class="btn btn-primary"><a href="enteghadat.html">  انتقادات پیشنهادات</a></button>
+                <button type="button" class="btn btn-default"><a href="showing.html"> مشاهده کردن</a></button>
+                <button type="button" class="btn btn-default"><a href="adding.html">افزودن </a></button>
                 <button type="button" class="btn btn-default"> صفحه اصلی</button>
             </div>
 
@@ -101,6 +101,7 @@
 <div class="row">
 <div class="box col-md-offset-2 col-md-10 col-sm-3 ">
 <div class="box-inner">
+
     <div class="box-header well" data-original-title="">
         <h2 style="float:right"><i  style="padding-right: 2%" class="glyphicon glyphicon-user">نظرات</i> </h2>
         <div class="box-icon" style="float: left">
@@ -109,29 +110,42 @@
             <a href="#" class="btn btn-close btn-round btn-default"><i class="glyphicon glyphicon-remove"></i></a>
     </div>
     </div>
+
     <div class="box-content">
     <table class="table table-striped table-bordered bootstrap-datatable datatable responsive">
         <thead>
         <tr>
+
             <th style="text-align: right">تغییرات</th>
             <th style="text-align: right">دسته بندی نظر</th>
             <th style="text-align: right"> نظر</th>
             <th style="text-align: right">آی دی تلگرام</th>
         </tr>
         </thead>
+
         <tbody>
         <tr>
+            {% for comment in comments %}
             <td class="center pull-right">
             <a class="btn btn-danger" href="#">
                 <i class="glyphicon glyphicon-trash icon-white"></i>
                 حذف
             </a>
 
+
         </td>
+
+            <td> {{comment.3}} </td>
+            <td> {{comment.2}} </td>
+            <td> {{comment.1}} </td>
         </tr>
 
+
         </tbody>
+        {% endfor %}
     </table>
+
+
 
     </div>
 
