orders page yeaaaah

--- a/admin_panel/templates/showing.html
+++ b/admin_panel/templates/showing.html
@@ -55,7 +55,7 @@
     <style>
         @font-face {
             font-family: "Iranian Sans";
-            url({% static 'adminpanel/fonts/iraniansans.ttf' %})
+            src: url({% static 'adminpanel/fonts/iraniansans.ttf' %});
         }
         body{
             font-family: "Iranian Sans";
