--- a/admin_panel/templates/orders.html
+++ b/admin_panel/templates/orders.html
@@ -21,25 +21,29 @@
         EasyBot
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/css/bootstrap-select.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+          integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/css/bootstrap-select.min.css">
     <!-- The styles -->
     <link id="bs-css" href="{% static 'adminpanel/css/bootstrap-cerulean.min.css' %}" rel="stylesheet">
 
     <link href="{% static 'adminpanel/css/charisma-app.css' %}" rel="stylesheet">
     <link href="{% static 'adminpanel/bower_components/fullcalendar/dist/fullcalendar.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanel/bower_components/fullcalendar/dist/fullcalendar.print.css' %}" rel='stylesheet' media='print'>
+    <link href="{% static 'adminpanel/bower_components/fullcalendar/dist/fullcalendar.print.css' %}" rel='stylesheet'
+          media='print'>
     <link href="{% static 'adminpanel/bower_components/chosen/chosen.min.css' %}" rel='stylesheet'>
     <link href="{% static 'adminpanel/bower_components/colorbox/example3/colorbox.css' %}" rel='stylesheet'>
     <link href="{% static 'adminpanel/bower_components/responsive-tables/responsive-tables.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanel/bower_components/bootstrap-tour/build/css/bootstrap-tour.min.css' %}" rel='stylesheet'>
+    <link href="{% static 'adminpanel/bower_components/bootstrap-tour/build/css/bootstrap-tour.min.css' %}"
+          rel='stylesheet'>
     <link href="{% static 'adminpanel/css/jquery.noty.css' %}" rel='stylesheet'>
     <link href="{% static 'adminpanel/css/noty_theme_default.css' %}" rel='stylesheet'>
     <link href="{% static 'adminpanel/css/elfinder.min.css' %}" rel='stylesheet'>
     <link href="{% static 'adminpanel/css/elfinder.theme.css' %}" rel='stylesheet'>
     <link href="{% static 'adminpanel/css/jquery.iphone.toggle.css' %}" rel='stylesheet'>
     <link href="{% static 'adminpanel/css/uploadify.css' %}" rel='stylesheet'>
-    <link href="{% static 'adminpanel/css/animate.min.css' %}" rel="stylesheet" >
+    <link href="{% static 'adminpanel/css/animate.min.css' %}" rel="stylesheet">
 
     <!-- jQuery -->
     <script src="{% static 'adminpanel/bower_components/jquery/jquery.min.js' %}"></script>
@@ -51,177 +55,145 @@
 
     <!-- The fav icon -->
     <link rel="shortcut icon" href="{% static 'adminpanel/img/favicon.ico' %}">
-
+    <style>
+        @font-face {
+        font-family: "Iranian Sans";
+        src: url({% static 'adminpanel/fonts/iraniansans.ttf' %});
+        }
+        body{
+        font-family: "Iranian Sans";
+        }
+        h2{
+        font-family: "Iranian Sans";
+        }
+    </style>
 </head>
 
 <body>
-    <!-- topbar starts -->
-    <div class="navbar navbar-default" role="navigation">
+<!-- topbar starts -->
+<div class="navbar navbar-default" role="navigation">
 
-        <div class="navbar-inner">
-            <button type="button" class="navbar-toggle pull-left animated flip">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="index.html"> <img alt="Charisma Logo" src="img/logo20.png" class="hidden-xs"/>
-                <span>EasyBot</span></a>
+    <div class="navbar-inner">
+        <button type="button" class="navbar-toggle pull-left animated flip">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="index.html"> <img alt="Charisma Logo" src="img/logo20.png" class="hidden-xs"/>
+            <span>EasyBot</span></a>
 
-            <!-- user dropdown starts -->
-            <!-- navbar buttons starts -->
-            <div class="btn-group pull-right" role="group">
-                <button type="button" class="btn btn-default"> سفارشات</button>
-                <button type="button" class="btn btn-default"> نظرات</button>
-                <button type="button" class="btn btn-default"> دسته بندی ها</button>
-                <button type="button" class="btn btn-default"> انتقادات پیشنهادات</button>
-                <button type="button" class="btn btn-primary"> مشاهده کردن</button>
-                <button type="button" class="btn btn-default">افزودن </button>
-                <button type="button" class="btn btn-default"> صفحه اصلی</button>
+        <!-- user dropdown starts -->
+        <!-- navbar buttons starts -->
+        <div class="btn-group pull-right" role="group">
+            <button type="button" class="btn btn-default"> سفارشات</button>
+            <button type="button" class="btn btn-default"> نظرات</button>
+            <button type="button" class="btn btn-default"> دسته بندی ها</button>
+            <button type="button" class="btn btn-default"> انتقادات پیشنهادات</button>
+            <button type="button" class="btn btn-primary"> مشاهده کردن</button>
+            <button type="button" class="btn btn-default">افزودن</button>
+            <button type="button" class="btn btn-default"> صفحه اصلی</button>
+        </div>
+
+        <!-- user dropdown ends -->
+
+        <!-- theme selector starts -->
+
+        <!-- theme selector ends -->
+
+        <ul class="collapse navbar-collapse nav navbar-nav  top-menu">
+
+
+            <li>
+                <form class="navbar-search pull-left">
+                    <input style="text-align: right" placeholder="جستجو" class="search-query form-control col-md-10"
+                           name="query"
+                           type="text">
+                </form>
+            </li>
+        </ul>
+
+    </div>
+</div>
+<!-- topbar ends -->
+<div class="container-fluid">
+    <div class="row">
+        <div class="box col-md-12 col-sm-3 ">
+            <div class="box-inner">
+                <div class="box-header well" data-original-title="">
+                    <h2 style="float:right">سفارشات</h2>
+
+                    <div class="box-icon" style="float: left">
+                        <a href="#" class="btn btn-minimize btn-round btn-default"><i
+                                class="glyphicon glyphicon-chevron-up"></i></a>
+                        <a href="#" class="btn btn-close btn-round btn-default"><i
+                                class="glyphicon glyphicon-remove"></i></a>
+                    </div>
+                </div>
+                <div class="box-content">
+                    <table class="table table-striped table-bordered bootstrap-datatable datatable responsive">
+                        <thead>
+                        <tr>
+                            <th style="text-align: right">چاپ فاکتور</th>
+                            <th style="text-align: right">توضیحات سفارش</th>
+                            <th style="text-align: right">مشاهده محصولات سفارشی</th>
+                            <th style="text-align: right">مشخصات سفارش دهنده</th>
+                            <th style="text-align: right">شماره سفارش</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            {% for data in orders_data %}
+                            <td class="center ">
+                                <div class="btn-group" role="group">
+                                    <button type="button" class="btn btn-success btn-sm" style="float: right">
+
+                                        <i class="glyphicon glyphicon-zoom-in icon-white"></i>
+                                        نمایش
+
+                                    </button>
+                                    <button type="button" class="btn btn-info btn-sm" style="float: right">
+
+                                        <i class="glyphicon glyphicon-edit icon-white"></i>
+                                        تغییر
+
+                                    </button>
+                                    <button type="button" class="btn btn-danger btn-sm" style="float: right">
+
+                                        <i class="glyphicon glyphicon-trash icon-white"></i>
+                                        حذف
+
+                                    </button>
+                                </div>
+                            </td>
+
+                            <td>{{data.3}}</td>
+                            <td>{{data.2}}</td>
+                            <td>{{data.1}}</td>
+                            <td>{{data.0}}</td>
+
+                        </tr>
+                        {% endfor %}
+                        </tbody>
+
+                    </table>
+
+                </div>
+
             </div>
-
-            <!-- user dropdown ends -->
-
-            <!-- theme selector starts -->
-
-            <!-- theme selector ends -->
-
-            <ul class="collapse navbar-collapse nav navbar-nav  top-menu">
-
-
-                <li>
-                    <form class="navbar-search pull-left">
-                        <input style="text-align: right" placeholder="جستجو" class="search-query form-control col-md-10" name="query"
-                               type="text">
-                    </form>
-                </li>
-            </ul>
-
         </div>
     </div>
-    <!-- topbar ends -->
-<div class="container-fluid">
-<div class="row">
-<div class="box col-md-12 col-sm-3 ">
-<div class="box-inner">
-    <div class="box-header well" data-original-title="">
-        <h2 style="float:right"><i  style="padding-right: 2%" class="glyphicon glyphicon-user"> محصولات</i> </h2>
-        <div class="box-icon" style="float: left">
-            <a href="#" class="btn btn-minimize btn-round btn-default"><i
-                    class="glyphicon glyphicon-chevron-up"></i></a>
-            <a href="#" class="btn btn-close btn-round btn-default"><i class="glyphicon glyphicon-remove"></i></a>
-    </div>
-    </div>
-    <div class="box-content">
-    <table class="table table-striped table-bordered bootstrap-datatable datatable responsive">
-        <thead>
-        <tr>
-            <th style="text-align: right"></th>
-            <th style="text-align: right">نام محصول</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            {% for data in orders_data %}
-            <td class="center ">
-                <div class="btn-group" role="group">
-                    <button type="button" class="btn btn-success btn-sm" style="float: right">
-
-                            <i class="glyphicon glyphicon-zoom-in icon-white"></i>
-                            نمایش
-
-                    </button>
-                    <button type="button" class="btn btn-info btn-sm" style="float: right">
-
-                            <i class="glyphicon glyphicon-edit icon-white"></i>
-                            تغییر
-
-                    </button>
-                    <button type="button" class="btn btn-danger btn-sm" style="float: right">
-
-                            <i class="glyphicon glyphicon-trash icon-white"></i>
-                            حذف
-
-                    </button>
-                </div>
-            </td>
-
-                <td>{{data.3}}</td>
-                <td>{{data.4}}</td>
-                <td>{{data.2}}</td>
-                <td>{{data.1}}</td>
-
-        </tr>
-            {% endfor %}
-        </tbody>
-
-    </table>
-
-    </div>
-
-</div>
-</div>
-</div>
 </div>
 
 
-    <!-- Ad ends -->
+<!-- Ad ends -->
 
-    <hr>
+<hr>
 
 
-    <footer class="row">
-        <p class="col-md-9 col-sm-9 col-xs-12 copyright">&copy; <a href="#" target="_blank">EasyBot</a> 2012 - 2015</p>
-
-        <p class="col-md-3 col-sm-3 col-xs-12 powered-by">Powered by: <a
-                href="#">EasyBot</a></p>
+<footer class="row">
+        <p style="text-align: center" class="col-md-offset-3 col-sm-offset-3col-md-6 col-sm-6 col-xs-12 copyright">&copy; <a href="#" target="_blank">طراحی شده توسط تیم بات گرام</a></p>
     </footer>
-
-</div><!--/.fluid-container-->
-
-<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-<!-- external javascript -->
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/bootstrap-select.min.js"></script>
-
-<!-- (Optional) Latest compiled and minified JavaScript translation files -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/i18n/defaults-*.min.js"></script>
-
-
-<script src="{% static 'adminpanel/bower_components/bootstrap/dist/js/bootstrap.min.js' %}"></script>
-
-
-<!-- calender plugin -->
-<script src="{% static 'adminpanel/bower_components/moment/min/moment.min.js' %}"></script>
-<script src="{% static 'adminpanel/bower_components/fullcalendar/dist/fullcalendar.min.js' %}"></script>
-<!-- data table plugin -->
-<script src="{% static 'adminpanel/js/jquery.dataTables.min.js' %}"></script>
-
-<!-- select or dropdown enhancer -->
-<script src="{% static 'adminpanel/bower_components/chosen/chosen.jquery.min.js' %}"></script>
-<!-- plugin for gallery image view -->
-<script src="{% static 'adminpanel/bower_components/colorbox/jquery.colorbox-min.js' %}"></script>
-<!-- notification plugin -->
-<script src="{% static 'adminpanel/js/jquery.noty.js' %}"></script>
-<!-- library for making tables responsive -->
-<script src="{% static 'adminpanel/bower_components/responsive-tables/responsive-tables.js'%}"></script>
-<!-- tour plugin -->
-<script src="{% static 'adminpanel/bower_components/bootstrap-tour/build/js/bootstrap-tour.min.js' %}"></script>
-<!-- star rating plugin -->
-<script src="{% static 'adminpanel/js/jquery.raty.min.js' %}"></script>
-<!-- for iOS style toggle switch -->
-<script src="{% static 'adminpanel/js/jquery.iphone.toggle.js' %}"></script>
-<!-- autogrowing textarea plugin -->
-<script src="{% static 'adminpanel/js/jquery.autogrow-textarea.js' %}"></script>
-<!-- multiple file upload plugin -->
-<script src="{% static 'adminpanel/js/jquery.uploadify-3.1.min.js' %}"></script>
-<!-- history.js for cross-browser state change on ajax -->
-<script src="{% static 'adminpanel/js/jquery.history.js' %}"></script>
-<!-- application script for Charisma demo -->
-<script src="{% static 'adminpanel/js/charisma.js' %}"></script>
 
 
 </body>
